# opencl

src/: CMakeLists.txt  main.cpp
